correct server add

--- a/project.config.json
+++ b/project.config.json
@@ -4,16 +4,17 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"autoAudits": false
+		"autoAudits": false,
+		"uglifyFileName": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx2ff759d4c47b32d1",
+	"appid": "wxf561b40709d5a0b8",
 	"projectname": "CheckChack",
 	"debugOptions": {
 		"hidedInDevtools": []
