--- a/app.json
+++ b/app.json
@@ -3,12 +3,39 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/library/floor",
-    "pages/library/room"
+    "pages/library/room",
+    "pages/profile/profile",
+    "pages/quickstart/quickstart",
+    "pages/study/study",
+    "pages/comment/comment",
+    "pages/ranking/ranking"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "CheckChack",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/ranking/ranking",
+        "text": "Ranking",
+        "iconPath": "assets/icons/Ranking.png",
+        "selectedIconPath": "assets/icons/ranking.png"
+      },
+      {
+        "pagePath": "pages/index/index",
+        "text": "Home",
+        "iconPath": "assets/icons/Home.png",
+        "selectedIconPath": "assets/icons/Home.png"
+      },
+      {
+        "pagePath": "pages/profile/profile",
+        "text": "Profile",
+        "iconPath": "assets/icons/Profile.png",
+        "selectedIconPath": "assets/icons/Profile.png"
+      }
+    ]
   }
 }
