--- a/project.config.json
+++ b/project.config.json
@@ -55,9 +55,9 @@
 				},
 				{
 					"id": 2,
-					"name": "study page",
+					"name": "room page",
 					"pathName": "packageA/pages/library/room",
-					"query": "",
+					"query": "room=L405",
 					"scene": null
 				}
 			]
