--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -13,7 +13,7 @@
 		"uglifyFileName": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
+	"libVersion": "2.5.0",
 	"appid": "wxf561b40709d5a0b8",
 	"projectname": "CheckChack",
 	"debugOptions": {
@@ -37,8 +37,30 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 2,
+			"list": [
+				{
+					"id": 0,
+					"name": "Scan QR",
+					"pathName": "pages/index/index",
+					"query": "scene=L405010",
+					"scene": 1047
+				},
+				{
+					"id": -1,
+					"name": "study page",
+					"pathName": "pages/study/study",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 2,
+					"name": "study page",
+					"pathName": "packageA/pages/library/room",
+					"query": "",
+					"scene": null
+				}
+			]
 		}
 	}
 }
