--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -47,9 +47,9 @@
 					"scene": 1047
 				},
 				{
-					"id": -1,
+					"id": 1,
 					"name": "study page",
-					"pathName": "pages/study/study",
+					"pathName": "packageA/pages/study/study",
 					"query": "",
 					"scene": null
 				},
@@ -58,6 +58,20 @@
 					"name": "room page",
 					"pathName": "packageA/pages/library/room",
 					"query": "room=L405",
+					"scene": null
+				},
+				{
+					"id": 3,
+					"name": "comment",
+					"pathName": "packageA/pages/comment/comment",
+					"query": "hh=99&mm=66",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "logs",
+					"pathName": "pages/logs/logs",
+					"query": "",
 					"scene": null
 				}
 			]
